Scrollbar fix-mobile and site SEO desc update

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,7 @@
   padding: 30px 0px;
 }
 
-.info-footer, .info-footer h2 {
+.info-footer, .info-footer h2, .info-footer h3 {
   font-size: 11px;
   margin: 0px;
 }
